--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                             <i class="material-icons">email</i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">abc@gmail.com</div>
+                                <div class="sub-title">nu01280@gmail.com</div>
                             </div>
                         </div>
                     </div>
