--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="material-icons">language</i>
+                        <i class="material-icons">translate</i>
                         <div class="text">Translation</div>
                         <p>Translate into differents languages : <br> Arabic | English | French </p>
                     </div>
@@ -339,10 +339,10 @@
                 <div class="column left">
                     <div class="text">Get in Touch</div>
 
-                    <a href="https://stackoverflow.com/users/14495946/xaraf?tab=profile" class="fa fa-stack-overflow" style="font-size:40px"></a>
-                    <a href="https://github.com/xarafeddine" class="fa fa-github" style="font-size:40px"></a>
-                    <a href="#" class="fa fa-google" style="font-size:40px"></a>
-                    <a href="https://www.linkedin.com/in/mohamed-charaf-eddine-ait-ougrram-7b97b91b7/" class="fa fa-linkedin" style="font-size:40px"></a>
+                    <a href="https://stackoverflow.com/users/14495946/xaraf?tab=profile" class="fa fa-stack-overflow" style="font-size:30px"></a>
+                    <a href="https://github.com/xarafeddine" class="fa fa-github" style="font-size:30px"></a>
+                    <a href="#" class="fa fa-google" style="font-size:30px"></a>
+                    <a href="https://www.linkedin.com/in/mohamed-charaf-eddine-ait-ougrram-7b97b91b7/" class="fa fa-linkedin" style="font-size:30px"></a>
 
                     <div class="icons">
                         <div class="row">
